# t4-s3_hal_bsp-lvgl

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  rm690b0_procedure.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/: FUNDING.yml
4_sd_card/: circletriangle.avi  eye.avi  fallingcube.avi  hearttunnel.avi  pulpfictiondance.avi  redplasma.avi  spacetime.avi  starspin.avi  waterrings.avi
components/cst226se/: CMakeLists.txt  README.md  cst226se.c  cst226se.h
components/cst226se/test/: main.c
components/lv_ui/: CMakeLists.txt
components/lv_ui/include/: lv_ui.h  ui_avi.h  ui_private.h
components/lv_ui/src/: img_venezuela.c  img_watermelon.c  lv_ui.c  swipeD34.c  swipeL34.c  swipeR34.c  swipeU34.c  ui_avi.c  ui_helpers.c  ui_home.c  ui_media.c  ui_network.c  ui_private.h  ui_system.c
components/rm690b0/: CMakeLists.txt  README.md  rm690b0.c  rm690b0.h
components/rm690b0/include/: rm690b0.h
components/rm690b0/test/: main.c
components/sd_card/: CMakeLists.txt  sd_card.c  sd_card.h
components/sy6970/: CMakeLists.txt  README.md  sy6970.c  sy6970.h
components/sy6970/include/: sy6970.h
components/sy6970/test/: main.c
components/t4s3_bsp/: CMakeLists.txt  lvgl_mgr.c  lvgl_mgr.h
components/t4s3_hal/: CMakeLists.txt  button.c  cst226se.c  hal_mgr.c  hal_mgr.h  sy6970.c
docs/: LVGL_JOURNEY.md  README_RM690B0.md  RM690B0_DataSheet.txt  SY6970_Datasheet.txt  cst226se_v3.5.txt  rm690b0_procedure.txt  rm690b0_rotation_guide.md  t4_s3_schematic.txt  t4s3pins.txt
main/: CMakeLists.txt  idf_component.yml  main.c
(+11 files in other folders)
